[main] fix padding not required on mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@
 
 #root {
 	background-image: linear-gradient(90deg, #e2c9be 0%, #fbf7e9 74%);
-	// background-color: $white;
-	padding-top: 70px;
+	@media (min-width: 800px) {
+		padding-top: 70px;
+	}
 }
